--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     controls
     width="640px"
     preload="auto"
+    poster="https://img.freepik.com/free-photo/mountains-lake_1398-1150.jpg?w=2000"
     >
     </video>
     <h2 class="title">Прослухайте аудіо</h1>
